--- a/.env.example
+++ b/.env.example
@@ -8,9 +8,9 @@ BCRYPT_SALT=
 JWT_SECRET=
 JWT_EXPIRES_IN=
 
-AWS_ACCESS_KEY=
-AWS_SECRET_KEY=
-AWS_S3_BUCKET=
+CLOUDINARY_CLOUD_NAME=
+CLOUDINARY_API_KEY=
+CLOUDINARY_API_SECRET=
 
 NODE_ENV=
 
