--- a/package.json
+++ b/package.json
@@ -35,10 +35,9 @@
     "@nestjs/swagger": "^7.3.1",
     "@nestjs/typeorm": "^10.0.2",
     "argon2": "^0.41.1",
-    "aws-sdk": "^2.1627.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
-    "dayjs": "^1.11.13",
+    "cloudinary": "^2.5.1",
     "dotenv": "^16.4.5",
     "mysql2": "^3.9.7",
     "nodemailer": "^6.9.15",
