--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,6 +18,7 @@
     "forceConsistentCasingInFileNames": false,
     "noFallthroughCasesInSwitch": false
   },
+  "include": ["src/**/*"],
   "exclude": [
     "node_modules",
     "dist",
