--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "class-validator": "^0.14.1",
     "cloudinary": "^2.5.1",
     "dotenv": "^16.4.5",
+    "express": "^4.21.2",
     "mysql2": "^3.9.7",
     "nodemailer": "^6.9.15",
     "pug": "^3.0.3",
