--- a/vercel.json
+++ b/vercel.json
@@ -1,21 +1,8 @@
 {
-    "version": 2,
-    "builds": [
-        {
-            "src": "src/main.js",
-            "use": "@vercel/node"
+    "functions": {
+        "api/**/*.ts": {
+            "maxDuration": 10
         }
-    ],
-    "routes": [
-        {
-            "src": "/(.*)",
-            "dest": "src/main.js",
-            "methods": [
-                "GET",
-                "POST",
-                "PUT",
-                "DELETE"
-            ]
-        }
-    ]
+    },
+    "rewrites": [{ "source": "/(.*)", "destination": "/api" }]
 }
