--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "webtoon-api",
+  "name": "food-api",
   "version": "0.0.1",
   "description": "",
   "author": "",
@@ -39,7 +39,6 @@
     "class-validator": "^0.14.1",
     "cloudinary": "^2.5.1",
     "dotenv": "^16.4.5",
-    "express": "^4.21.2",
     "mysql2": "^3.9.7",
     "nodemailer": "^6.9.15",
     "pug": "^3.0.3",
@@ -50,7 +49,7 @@
     "uuid": "^10.0.0"
   },
   "devDependencies": {
-    "@nestjs/cli": "^10.0.0",
+    "@nestjs/cli": "^10.4.9",
     "@nestjs/schematics": "^10.0.0",
     "@nestjs/serve-static": "^4.0.2",
     "@nestjs/testing": "^10.0.0",
