--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
     "cloudinary": "^2.5.1",
+    "dayjs": "^1.11.13",
     "dotenv": "^16.4.5",
     "mysql2": "^3.9.7",
     "nodemailer": "^6.9.15",
